--- a/Login-page.html
+++ b/Login-page.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>Login page</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="login-form-container">
             <div class="campaus-name">
-                <img src="/photo_2024-05-30_10-29-16-removebg-preview.png">
+                <img src="photo_2024-05-30_10-29-16-removebg-preview.png">
                 <h1>UNITY UNIVERSTY</h1>
             </div>
             <form class="form-section">
